--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,10 @@
     
     <div class="fixed-bottom d-flex">
         <!-- Answer is hidden -->
-        <button id="showDetailsButton" class="btn btn-primary flex-fill py-3" onclick="showAllDetails()">Show All Details</button>
+        <button id="showDetailsButton" class="btn btn-primary flex-fill py-3" onclick="onShowAllDetails()">Show All Details</button>
         <!-- Answer is being displayed -->
-        <button id="addToDeckButton" class="btn btn-danger flex-fill py-3 d-none" onclick="addToDeck()">Add to deck</button>
-        <button id="nextSentenceButton" class="btn btn-success flex-fill py-3 d-none" onclick="nextSentence()">Next sentence</button>
+        <button id="addToDeckButton" class="btn btn-danger flex-fill py-3 d-none" onclick="onAddToDeck()">Add to deck</button>
+        <button id="nextSentenceButton" class="btn btn-success flex-fill py-3 d-none" onclick="onNextSentence()">Next sentence</button>
     </div>
     
     <div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
