--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <div class="fixed-top d-flex p-2 flex-row">
-        <button type="button" class="btn btn-primary justify-content-start" data-bs-toggle="modal" data-bs-target="#deckModal">
+        <button id='deckButton' type="button" class="btn btn-primary justify-content-start d-none" data-bs-toggle="modal" data-bs-target="#deckModal">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stack"
                 viewBox="0 0 16 16">
                 <path
@@ -18,12 +18,12 @@
                     d="m14.12 6.576 1.715.858c.22.11.22.424 0 .534l-7.568 3.784a.6.6 0 0 1-.534 0L.165 7.968a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0z" />
             </svg>
             Deck
-            <span class="badge text-bg-secondary">0</span>
+            <span id="deckCountElement" class="badge text-bg-secondary">0</span>
         </button>
-        <span class="justify-content-center flex-grow-1 text-center">
+        <span id="sentenceCountElement" class="justify-content-center flex-grow-1 text-center">
             Loading sentences...
         </span>
-        <button type="button" class="btn btn-primary justify-content-end" data-bs-toggle="modal" data-bs-target="#filterModal">
+        <button id='filterButton' type="button" class="btn btn-primary justify-content-end d-none" data-bs-toggle="modal" data-bs-target="#filterModal">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel"
                 viewBox="0 0 16 16">
                 <path
@@ -36,13 +36,13 @@
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="text-center">
             <!-- The main sentence display (may have furigana) -->
-            <h1><ruby>今日<rp>(</rp><rt>きょう</rt><rp>)</rp></ruby>は<ruby>日曜日<rp>(</rp><rt>にちようび</rt><rp>)</rp></ruby>だよ。</h1>
-            <h5>Today is Sunday.</h5>
-            <button type="button" class="btn btn-secondary btn-sm my-2 mx-2">Alt Translations</button>
-            <button type="button" class="btn btn-secondary btn-sm my-2 mx-2" data-bs-toggle="collapse" data-bs-target="#wkDetailsCard">Level 18</button>
+            <h1 id="jpSentenceElement" class="d-none"><ruby>今日<rp>(</rp><rt>きょう</rt><rp>)</rp></ruby>は<ruby>日曜日<rp>(</rp><rt>にちようび</rt><rp>)</rp></ruby>だよ。</h1>
+            <h5 id="enSentenceElement" class="d-none">Today is Sunday.</h5>
+            <button id='altTranslationsButton' type="button" class="btn btn-secondary btn-sm my-2 mx-2 d-none" onclick="showAltTranslation()">Alt Translations</button>
+            <button id='wkDetailsButton' type="button" class="btn btn-secondary btn-sm my-2 mx-2 d-none" data-bs-toggle="collapse" data-bs-target="#wkDetailsCard">Level 18</button>
 
             <div class="collapse" id="wkDetailsCard">
-                <div class="card card-body mx-2">
+                <div id="wkDetailsElement" class="card card-body mx-2">
                     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user
                     activates the relevant trigger.
                 </div>
@@ -52,10 +52,10 @@
     
     <div class="fixed-bottom d-flex">
         <!-- Answer is hidden -->
-        <button id="showDetailsButton" class="btn btn-primary flex-fill py-3" onclick="onShowAllDetails()">Show All Details</button>
+        <button id="showDetailsButton" class="btn btn-primary flex-fill py-3 d-none" onclick="showAllDetails()">Show All Details</button>
         <!-- Answer is being displayed -->
-        <button id="addToDeckButton" class="btn btn-danger flex-fill py-3 d-none" onclick="onAddToDeck()">Add to deck</button>
-        <button id="nextSentenceButton" class="btn btn-success flex-fill py-3 d-none" onclick="onNextSentence()">Next sentence</button>
+        <button id="addToDeckButton" class="btn btn-danger flex-fill py-3 d-none" onclick="addCurrentSentenceToDeck()">Add to deck</button>
+        <button id="nextSentenceButton" class="btn btn-success flex-fill py-3 d-none" onclick="nextSentence()">Next sentence</button>
     </div>
     
     <div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-success flex-fill">Run filter</button>
+                    <button id='runFilterButton' type="button" class="btn btn-success flex-fill" onclick="runFilter()">Run filter</button>
                 </div>
             </div>
         </div>
@@ -149,9 +149,9 @@
                 </div>
                 <div class="modal-body">
                     <h5>Export deck as CSV for importing into Anki</h5>
-                    <button type="button" class="btn btn-success">Export</button>
+                    <button id='exportDeckButton' type="button" class="btn btn-success" onclick="exportDeck()">Export</button>
                     <h5>Clear deck</h5>
-                    <button type="button" class="btn btn-danger">Clear</button>
+                    <button id='clearDeckButton' type="button" class="btn btn-danger" onclick="clearDeck()">Clear</button>
                 </div>
             </div>
         </div>
