Hopefully fix details collapse

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             <h1 id="jpSentenceElement" class="d-none mx-5" onclick="jpSentenceClick()"><ruby>今日<rp>(</rp><rt>きょう</rt><rp>)</rp></ruby>は<ruby>日曜日<rp>(</rp><rt>にちようび</rt><rp>)</rp></ruby>だよ。</h1>
             <h5 id="enSentenceElement" class="d-none mx-5">Today is Sunday.</h5>
             <button id='altTranslationsButton' type="button" class="btn btn-secondary btn-sm my-2 mx-2 d-none" onclick="showAltTranslation()">Alt Translations</button>
-            <button id='wkDetailsButton' type="button" class="btn btn-secondary btn-sm my-2 mx-2 d-none" data-bs-toggle="collapse" data-bs-target="#wkDetailsCard">Level 18</button>
+            <button id='wkDetailsButton' type="button" class="btn btn-secondary btn-sm my-2 mx-2 d-none" onclick="toggleWkDetails()">Level 18</button>
 
             <div class="collapse" id="wkDetailsCard">
                 <div id="wkDetailsElement" class="card card-body mx-2">
